Fix message draft rich edit toolbar button spacing

--- a/Libadwaita/styles/message-draft.less
+++ b/Libadwaita/styles/message-draft.less
@@ -375,6 +375,8 @@
 // Draft message (edit mode) rich edit toolbar
 //------------------------------------------------------------
 .RichEditor-toolbar {
+	margin-bottom: 8px;
+	
 	.inner {
 		background: @card_bg_color !important;
 	}
@@ -396,7 +398,7 @@
 		color: @text_color;
 		font-size: @text_size;
 		font-weight: bold;
-		margin: 8px 4px 24px;
+		margin: 8px 4px 0px;
 		padding: 0;
 		cursor: auto;
 
@@ -435,7 +437,7 @@
 			line-height: 34px;
 			font-size: @text_size;
 			font-weight: bold;
-			margin: 8px 4px 24px;
+			margin: 8px 4px 0px;
 
 			&:hover,
 			&:focus {
